# agent-meeting-platform

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  PLAN.md  README.md  demo.cast  demo.py  demo_output.txt  docker-compose.yml  meeting-transcript.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: __init__.py  dependencies.py  hashing.py  jwt.py  permissions.py
backend/app/core/: events.py  exception_handlers.py  protocol.py  security.py
backend/app/models/: __init__.py  agent.py  base.py  decision.py  message.py  moderation_task.py  room.py  user.py
backend/app/routers/: action_items.py  admin.py  agents.py  auth.py  decisions.py  messages.py  moderation.py  moderator.py  rooms.py  summaries.py  websocket.py
backend/app/schemas/: __init__.py
backend/app/services/: agent_service.py  llm_service.py  message_service.py  moderator_service.py  room_service.py
backend/migrations/: env.py
backend/migrations/versions/: 68930effe622_initial_tables.py  a1b2c3d4e5f6_add_rbac_fields.py  ce67480fa092_add_users_and_api_keys_tables.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_health.py  test_meeting_e2e.py  test_moderated_meeting.py  test_moderation_task.py  test_moderation_task_e2e.py  test_moderator.py  test_moderator_engine.py  test_rbac.py  test_rooms.py  test_simulated_meeting.py
docs/: API.md  ARCHITECTURE.md  AUTH_DESIGN.md  MODERATOR.md  MODERATOR_DESIGN.md  NEXT_STEPS.md  SDK.md  SDK_DESIGN.md
frontend/: Dockerfile
iterations/: 001-autonomous-cycle-improvements.md  README.md
meetings/: 2026-05-30-planning.md  2026-05-30-retro-cycle-1.md  2026-05-30-retro-cycle-2.md  2026-05-30-retro-cycle-3.md  2026-05-30-review-cycle-1.md  2026-05-30-review-cycle-2.md  (+2 more)
sdk/: Dockerfile.demo  README.md  e2e_test.py  pyproject.toml  run_autonomous_cycle.py  run_forward_plan_meeting.py  run_retro_meeting.py  run_review_meeting.py
sdk/agent_meeting/: __init__.py  client.py  exceptions.py  models.py  transport.py
sdk/agent_meeting/connectors/: __init__.py  openclaw.py  openclaw_connector.py
sdk/examples/: coding_agent.py  docker_demo.py  meeting_runner.py  planning_meeting.py  quickstart.py  simple_bot.py  test_auth.py  test_openclaw_bridge.py  test_real_agent.py
sdk/tests/: test_sdk.py
(+21 files in other folders)
