[project]
name = "agent-meeting"
version = "0.1.0"
description = "Python SDK for the Agent Meeting Platform — join meetings, chat, vote, investigate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "websockets>=14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
